# ReplitDrive

replitdrive/: pyproject.toml  run.sh
replitdrive/replitdrive/: main.py  server.py  settings.py
replitdrive/replitdrive/templates/: index.html
replitdrive/tests/: test_replitdrive.py
