[tool.poetry]
name = "replitdrive"
version = "0.1.0"
description = ""
authors = ["Allen Sun <allen.haha@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pycryptodomex = "^3.15.0"
Flask = "^2.2.2"
uWSGI = "^2.0.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
